--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -54,9 +54,8 @@
   <div class="side-panel-link">
     <a href="javascript:void(0)" id="closebtn" class="closebtn">×</a>
     <a class="nav-url" href="#home">HOME</a>
-    <a class="nav-url" href="#search">SEARCH</a>
-    <a class="nav-url" href="#about">ABOUT</a>
-    <a class="nav-url" href="#faq">FAQ</a>
+    <a class="nav-url" href="#search">FAVORITE</a>
+    <a class="nav-url" href="#about">ABOUT US</a>
   </div>
 </nav>
 
@@ -77,6 +76,38 @@
             <h4>rating: <span>4.5/5</span></h4>
             <ul>
               <li>Lokasi: Medan</li>
+              <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet.</li>
+            </ul>
+          </div>
+        </div>
+      </article>
+
+      <article class="card">
+        <div class="image-container">
+          <img src="https://dicoding-restaurant-api.el.r.appspot.com/images/medium/41" alt="">
+        </div>
+        <div class="info-container">
+          <div class="info-wrapper">
+            <h3>Bring Your Phone Cafe</h3>
+            <h4>rating: <span>4.5/5</span></h4>
+            <ul>
+              <li>Lokasi: Cilacap</li>
+              <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet.</li>
+            </ul>
+          </div>
+        </div>
+      </article>
+
+      <article class="card">
+        <div class="image-container">
+          <img src="https://dicoding-restaurant-api.el.r.appspot.com/images/medium/41" alt="">
+        </div>
+        <div class="info-container">
+          <div class="info-wrapper">
+            <h3>Bring Your Phone Cafe</h3>
+            <h4>rating: <span>4.5/5</span></h4>
+            <ul>
+              <li>Lokasi: Cilacap</li>
               <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet.</li>
             </ul>
           </div>
