--- a/src/styles/_body.scss
+++ b/src/styles/_body.scss
@@ -67,12 +67,29 @@
                 }
               }
             }
-
-
-
           }
         }
+    }
+  }
+}
 
+
+@media only screen and (min-width:582px) {
+  .main {
+    .parent {
+      .wrapper {
+        grid-template-columns: 1fr 1fr;
+      }
+    }
+  }
+}
+
+@media only screen and (min-width:1024px) {
+  .main {
+    .parent {
+      .wrapper {
+        grid-template-columns: repeat(4, 1fr);
+      }
     }
   }
 }
