--- a/src/styles/_heros.scss
+++ b/src/styles/_heros.scss
@@ -19,3 +19,29 @@
     }
   }
 }
+
+
+
+@media only screen and (min-width:582px) {
+  .header {
+    &-heros {
+      .heros {
+        width: 100%;
+        height: 240px;
+
+        .overlay {
+          width: 100%;
+          height: 512px;
+          background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.54) 0%, rgba(230, 206, 77, 0.54) 100%);
+          position: absolute;
+        }
+
+        img {
+          width: 100%;
+          height: 512px;
+          object-fit: cover;
+        }
+      }
+    }
+  }
+}
