--- a/src/styles/_paper.scss
+++ b/src/styles/_paper.scss
@@ -27,3 +27,26 @@
     }
   }
 }
+
+@media only screen and (min-width:582px) {
+  .header {
+    .paper-wrapper {
+      transform: translateY(-40%);
+      .paper {
+        margin-left: 40%;
+      }
+    }
+  }
+}
+
+
+@media only screen and (min-width:1172px) {
+  .header {
+    .paper-wrapper {
+      transform: translateY(-40%);
+      .paper {
+        margin-left: 50%;
+      }
+    }
+  }
+}
