--- a/src/styles/_body.scss
+++ b/src/styles/_body.scss
@@ -29,18 +29,25 @@
       gap: 15px;
       min-height: 200px;
 
+        a {
+          text-decoration: none;
+        }
+
         .card {
           width: 100%;
           filter: drop-shadow(0px 3px 4px rgba(0, 0, 0, 0.25));
           .image-container {
             img {
               width: 100%;
+              height: 200px;
+              object-fit: cover;
             }
           }
 
           .info-container {
             width: 100%;
-            background-color: #fff;
+            background-color: #2C270F;
+            color: #fff;
 
             .info-wrapper {
               padding: 15px;
@@ -64,6 +71,14 @@
               ul {
                 li {
                   margin-bottom: 5px;
+
+                  p {
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    display: -webkit-box;
+                    -webkit-line-clamp: 10; /* number of lines to show */
+                    -webkit-box-orient: vertical;
+                  }
                 }
               }
             }
@@ -84,7 +99,7 @@
   }
 }
 
-@media only screen and (min-width:1024px) {
+@media only screen and (min-width:1224px) {
   .main {
     .parent {
       .wrapper {
