--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -4,15 +4,19 @@
 footer {
   width: 100%;
   height: 70px;
-  background-color: #000;
+  background-color: #221D00;
   display: flex;
   justify-content: center;
   vertical-align: middle;
 
   span {
-    color: v.$primary-color;
     font-size: 14px;
     margin-top: 10px;
+
+    a {
+      color: v.$primary-color;
+      text-decoration: none;
+    }
 
   }
 }
