--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -17,6 +17,17 @@
 
     ul {
       display: none;
+
+      a {
+        color: #000;
+        text-decoration: none;
+
+        &:hover {
+          color: #fff;
+        }
+      }
+
+
     }
 
 
@@ -54,6 +65,9 @@
   }
 }
 
+.skip-link {
+
+}
 
 @media only screen and (min-width:582px) {
   .header {
