--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -17,16 +17,16 @@
 <header class="header">
   <nav class="header-nav">
     <div class="spin-toggle">
-      <input id='check-burger' type="checkbox" name="" value="">
+      <input id='check-burger' type="checkbox" name="" value="" tabindex="-1">
       <span></span>
       <span></span>
       <span></span>
     </div>
-    <img class="header-nav-icon" src="./images/svgs/ENAK_logo.svg" alt="Icon ENAK">
+    <a href="#"><img class="header-nav-icon" src="./images/svgs/ENAK_logo.svg" alt="Icon ENAK"></a>
     <ul>
-      <li>Home</li>
-      <li>Favourite</li>
-      <li>About Us</li>
+      <li><a href="#maincontent">Home</a> </li>
+      <li><a href="#">Favourite</a> </li>
+      <li><a href="#">About Us</a> </li>
     </ul>
   </nav>
   <div class="header-heros">
@@ -48,92 +48,31 @@
   </div>
 </header>
 
+
 <!-- navigation left -->
 
 <nav id="sidePanel" class="side-panel">
   <div class="side-panel-link">
-    <a href="javascript:void(0)" id="closebtn" class="closebtn">×</a>
-    <a class="nav-url" href="#home">HOME</a>
-    <a class="nav-url" href="#search">FAVORITE</a>
-    <a class="nav-url" href="#about">ABOUT US</a>
+    <a href="javascript:void(0)" id="closebtn" class="closebtn" tabindex="-1">×</a>
+    <a class="nav-url" href="#home" tabindex="-1">HOME</a>
+    <a class="nav-url" href="#search" tabindex="-1">FAVORITE</a>
+    <a class="nav-url" href="#about" tabindex="-1">ABOUT US</a>
   </div>
 </nav>
 
 <!-- navigation left -->
-<main class="main">
+<main class="main" id="maincontent">
   <div class="main-header">
     <h2 class="">Explore Tempat Makanan Enak</h2>
   </div>
   <div class="parent">
-    <section class="wrapper">
-      <article class="card">
-        <div class="image-container">
-          <img src="https://dicoding-restaurant-api.el.r.appspot.com/images/medium/41" alt="">
-        </div>
-        <div class="info-container">
-          <div class="info-wrapper">
-            <h3>Bring Your Phone Cafe</h3>
-            <h4>rating: <span>4.5/5</span></h4>
-            <ul>
-              <li>Lokasi: Medan</li>
-              <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet.</li>
-            </ul>
-          </div>
-        </div>
-      </article>
+    <section id="card-parent" class="wrapper">
 
-      <article class="card">
-        <div class="image-container">
-          <img src="https://dicoding-restaurant-api.el.r.appspot.com/images/medium/41" alt="">
-        </div>
-        <div class="info-container">
-          <div class="info-wrapper">
-            <h3>Bring Your Phone Cafe</h3>
-            <h4>rating: <span>4.5/5</span></h4>
-            <ul>
-              <li>Lokasi: Cilacap</li>
-              <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet.</li>
-            </ul>
-          </div>
-        </div>
-      </article>
-
-      <article class="card">
-        <div class="image-container">
-          <img src="https://dicoding-restaurant-api.el.r.appspot.com/images/medium/41" alt="">
-        </div>
-        <div class="info-container">
-          <div class="info-wrapper">
-            <h3>Bring Your Phone Cafe</h3>
-            <h4>rating: <span>4.5/5</span></h4>
-            <ul>
-              <li>Lokasi: Cilacap</li>
-              <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet.</li>
-            </ul>
-          </div>
-        </div>
-      </article>
-
-      <article class="card">
-        <div class="image-container">
-          <img src="https://dicoding-restaurant-api.el.r.appspot.com/images/medium/41" alt="">
-        </div>
-        <div class="info-container">
-          <div class="info-wrapper">
-            <h3>Bring Your Phone Cafe</h3>
-            <h4>rating: <span>4.5/5</span></h4>
-            <ul>
-              <li>Lokasi: Cilacap</li>
-              <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet.</li>
-            </ul>
-          </div>
-        </div>
-      </article>
     </section>
   </div>
 </main>
 <footer>
-  <span>develop by. Dhonni Ari Hendra Saputra</span>
+  <span> <a href="#">develop by. Dhonni Ari Hendra Saputra</a> </span>
 </footer>
 </body>
 </html>
