--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,23 +6,17 @@
     <title>Restaurant Apps Starter Project</title>
 </head>
 <body>
-<!-- <h1>Restaurant Apps Starter Project</h1>
-<p>Hallo coders! Anda berhasil menjalankan starter project.</p>
-<p>Jangan lupa untuk menggunakan salah satu gambar yang berada pada ./images/heros sebagai background hero elemen</p>
-<img src="./images/heros/hero-image_1.jpg" width="450" alt="">
-<img src="./images/heros/hero-image_2.jpg" width="450" alt="">
-<img src="./images/heros/hero-image_3.jpg" width="450" alt="">
-<img src="./images/heros/hero-image_4.jpg" width="450" alt=""> -->
-
+<a href="#maincontent" class="skip-link">Menuju ke konten</a>
 <header class="header">
   <nav class="header-nav">
-    <div class="spin-toggle">
-      <input id='check-burger' type="checkbox" name="" value="" tabindex="-1">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-    <a href="#"><img class="header-nav-icon" src="./images/svgs/ENAK_logo.svg" alt="Icon ENAK"></a>
+    <a id="check-burger" href="#open-sidebar">
+      <div class="spin-toggle">
+          <span></span>
+          <span></span>
+          <span></span>
+      </div>
+    </a>
+    <a href="#enak-logo"><img class="header-nav-icon" src="./images/svgs/ENAK_logo.svg" alt="Icon ENAK"></a>
     <ul>
       <li><a href="#maincontent">Home</a> </li>
       <li><a href="#">Favourite</a> </li>
@@ -53,10 +47,10 @@
 
 <nav id="sidePanel" class="side-panel">
   <div class="side-panel-link">
-    <a href="javascript:void(0)" id="closebtn" class="closebtn" tabindex="-1">×</a>
-    <a class="nav-url" href="#home" tabindex="-1">HOME</a>
-    <a class="nav-url" href="#search" tabindex="-1">FAVORITE</a>
-    <a class="nav-url" href="#about" tabindex="-1">ABOUT US</a>
+    <a href="javascript:void(0)" id="closebtn" class="closebtn">×</a>
+    <a class="nav-url" href="#home">HOME</a>
+    <a class="nav-url" href="#search">FAVORITE</a>
+    <a class="nav-url" href="#about">ABOUT US</a>
   </div>
 </nav>
 
@@ -72,7 +66,7 @@
   </div>
 </main>
 <footer>
-  <span> <a href="#">develop by. Dhonni Ari Hendra Saputra</a> </span>
+  <span> <a href="#">copyright @ 2021 - Enak</a> </span>
 </footer>
 </body>
 </html>
