--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -16,11 +16,11 @@
           <span></span>
       </div>
     </a>
-    <a href="#enak-logo"><img class="header-nav-icon" src="./images/svgs/ENAK_logo.svg" alt="Icon ENAK"></a>
+    <a class="a" href="#enak-logo"><img class="header-nav-icon" src="./images/svgs/ENAK_logo.svg" alt="Icon ENAK"></a>
     <ul>
-      <li><a href="#maincontent">Home</a> </li>
+      <li><a href="/">Home</a> </li>
       <li><a href="#">Favourite</a> </li>
-      <li><a href="#">About Us</a> </li>
+      <li><a href="https://github.com/Redchlorophyll">About Us</a> </li>
     </ul>
   </nav>
   <div class="header-heros">
@@ -48,9 +48,9 @@
 <nav id="sidePanel" class="side-panel">
   <div class="side-panel-link">
     <a href="javascript:void(0)" id="closebtn" class="closebtn">×</a>
-    <a class="nav-url" href="#home">HOME</a>
-    <a class="nav-url" href="#search">FAVORITE</a>
-    <a class="nav-url" href="#about">ABOUT US</a>
+    <a class="nav-url" href="/">HOME</a>
+    <a class="nav-url" href="#">FAVORITE</a>
+    <a class="nav-url" href="https://github.com/Redchlorophyll">ABOUT US</a>
   </div>
 </nav>
 
