create web component and add api to app

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -8,62 +8,18 @@
 <body>
 <a href="#maincontent" class="skip-link">Menuju ke konten</a>
 <header class="header">
-  <nav class="header-nav">
-    <a id="check-burger" href="#open-sidebar">
-      <div class="spin-toggle">
-          <span></span>
-          <span></span>
-          <span></span>
-      </div>
-    </a>
-    <a class="a" href="#enak-logo"><img class="header-nav-icon" src="./images/svgs/ENAK_logo.svg" alt="Icon ENAK"></a>
-    <ul>
-      <li><a href="/">Home</a> </li>
-      <li><a href="#">Favourite</a> </li>
-      <li><a href="https://github.com/Redchlorophyll">About Us</a> </li>
-    </ul>
-  </nav>
-  <div class="header-heros">
-    <div class="heros">
-      <div class="overlay">
+  <nav-bar></nav-bar>
 
-      </div>
-      <img src="./images/heros/hero-image_2.jpg" alt="Heros - gambar header">
-    </div>
-  </div>
-  <div class="paper-wrapper">
-    <div class="paper">
-      <div class="paper-content">
-        <h1>KALO <br>LAPER <br>MAKAN <br>AJA DI</h1>
-        <img src="./images/svgs/ENAK_logo.svg" alt="Icon ENAK">
-        <span>makanan enak dan ga berat di kantong.</span>
-      </div>
-    </div>
-  </div>
+  <hero-bar></hero-bar>
 </header>
 
 
 <!-- navigation left -->
 
-<nav id="sidePanel" class="side-panel">
-  <div class="side-panel-link">
-    <a href="javascript:void(0)" id="closebtn" class="closebtn">×</a>
-    <a class="nav-url" href="/">HOME</a>
-    <a class="nav-url" href="#">FAVORITE</a>
-    <a class="nav-url" href="https://github.com/Redchlorophyll">ABOUT US</a>
-  </div>
-</nav>
 
 <!-- navigation left -->
-<main class="main" id="maincontent">
-  <div class="main-header">
-    <h2 class="">Explore Tempat Makanan Enak</h2>
-  </div>
-  <div class="parent">
-    <section id="card-parent" class="wrapper">
+<main class="main" id="mainContent">
 
-    </section>
-  </div>
 </main>
 <footer>
   <span> <a href="#">copyright @ 2021 - Enak</a> </span>
