--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,6 @@
 // store global variables here
 
 $primary-color: #E6CE4D;
+$dark-primary: #9C6343;
 $body-color: #F8F8F8;
 $default-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
