--- a/src/templates/detail.html
+++ b/src/templates/detail.html
@@ -40,7 +40,9 @@
 
 <!-- navigation left -->
 <main class="main" id="maincontent">
-  <detail-bar></detail-bar>
+   <div class="detail-container">
+
+   </div>
 
 
   <div class="form-wrapper">
