--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,17 +9,15 @@
 <a href="#maincontent" class="skip-link">Menuju ke konten</a>
 <header class="header">
   <nav-bar></nav-bar>
+  <div class="hero-wrapper">
 
-  <hero-bar></hero-bar>
+  </div>
 </header>
 
-
-<!-- navigation left -->
-
-
-<!-- navigation left -->
 <main class="main" id="mainContent">
-
+  <div class="preloader-wrapper">
+    <img src="./preloader/807.gif" alt="">
+  </div>
 </main>
 <footer>
   <span> <a href="#">copyright @ 2021 - Enak</a> </span>
