--- a/src/styles/detail.scss
+++ b/src/styles/detail.scss
@@ -97,7 +97,7 @@
     font-size: 1.3em;
   }
 
-  .username-wrapper-form, .review-wrapper-form {
+  .username-wrapper-form, .review-wrapper-form, .submit-form {
     display: flex;
     flex-direction: column;
     margin: 20px 10px 10px;
