--- a/src/templates/detail.html
+++ b/src/templates/detail.html
@@ -58,6 +58,9 @@
         <label for="review">review</label>
         <textarea name="review" rows="8" cols="80"></textarea>
       </div>
+      <div class="submit-form">
+        <button id="addReviewButton" type="button" name="button">Simpan</button>
+      </div>
     </div>
   </div>
 
