add favorite page with idb

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#E6CE4D"/><link rel="apple-touch-icon" href="images/favicons/apple-icon.png">
+    <script src="https://use.fontawesome.com/b070c8f1df.js"></script>
+    <link rel="icon" href="images/favicons/favicon.ico">
     <title>Restaurant Apps Starter Project</title>
 </head>
 <body>
@@ -15,7 +19,7 @@
 </header>
 
 <main class="main" id="mainContent">
-  
+
 </main>
 <footer>
   <span> <a href="#">copyright @ 2021 - Enak</a> </span>
