--- a/src/styles/_body.scss
+++ b/src/styles/_body.scss
@@ -15,10 +15,34 @@
     }
   }
 
-  .parent {
+  .img-parent {
+    min-height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+
+    .img-empty {
+      width: 80%;
+      margin: 60px 0 20px 0;
+    }
+
+    span {
+      width: 90%;
+      text-align: center;
+      font-weight: bold;
+      color: #7C6E21;
+    }
+  }
+
+  .parent, .favorite-parent {
     width: 100%;
     display: flex;
     justify-content: center;
+
+
+
     .wrapper {
       width: 92%;
       display: grid;
@@ -86,22 +110,33 @@
         }
     }
   }
+
+  .favorite-parent {
+    margin-top: 40px;
+  }
 }
 
 
 @media only screen and (min-width:582px) {
   .main {
-    .parent {
+    .parent, .favorite-parent {
       .wrapper {
         grid-template-columns: 1fr 1fr;
       }
+    }
+  }
+
+  .img-parent {
+    .img-empty {
+      width: 40vw !important;
+      margin: 60px 0 20px 0;
     }
   }
 }
 
 @media only screen and (min-width:1224px) {
   .main {
-    .parent {
+    .parent, .favorite-parent {
       .wrapper {
         grid-template-columns: repeat(4, 1fr);
       }
