fix some eslint error

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,7 +10,7 @@
     <title>Restaurant Apps Starter Project</title>
 </head>
 <body>
-<a href="#maincontent" class="skip-link">Menuju ke konten</a>
+<a href="#mainContent" class="skip-link">Menuju ke konten</a>
 <header class="header">
   <nav-bar></nav-bar>
   <div class="hero-wrapper">
