--- a/src/styles/_preloader.scss
+++ b/src/styles/_preloader.scss
@@ -1,9 +1,8 @@
 .preloader-wrapper {
-  position: fixed;
-  top: 0;
+  position: absolute;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 300px;
   display: flex;
   justify-content: center;
   align-items: center;
